@@ -1,3 +1,4 @@
+2018-05-15 Fixed several issues with choice module on mobile devices
 2018-05-15 Fixed cell-show-answers class name in gamememo
 2018-05-15 Added class on hover in TrueFalse addon
 2018-05-14 Added TTS support for alt texts of images in multiple modules/addons
